tests/ui/suggestions/issue-53692.stderr
error[E0308]: mismatched types
  --> $DIR/issue-53692.rs:6:33
   |
LL |     let items_clone: Vec<i32> = ref_items.clone();
   |                      --------   ^^^^^^^^^^^^^^^^^ expected `Vec<i32>`, found `&[i32]`
   |                      |
   |                      expected due to this
   |
   = note: expected struct `Vec<i32>`
           found reference `&[i32]`
help: try using a conversion method
   |
LL |     let items_clone: Vec<i32> = ref_items.to_vec();
   |                                           ~~~~~~
LL |     let items_clone: Vec<i32> = ref_items.to_vec_co();
   |                                           ~~~~~~~~~

error[E0308]: mismatched types
  --> $DIR/issue-53692.rs:13:26
   |
LL |     let string: String = s.clone();
   |                 ------   ^^-----^^
   |                 |        | |
   |                 |        | help: try using a conversion method: `to_string`
   |                 |        expected `String`, found `&str`
   |                 expected due to this

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
